[package]
name = "ycss-rs"
version = "0.1.0"
authors = ["jiuker <guozhi.li@dmall.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
regex="*"
quick-xml = "*"
actix = "0.9.0"
actix-web = "3.0.0-alpha.3"
env_logger = "0.7"
actix-rt = "1.0.0"
futures = "0.3.1"

[dependencies.lazy_static]
features = ["spin_no_std"]