[package]
name = "ycss-rs"
version = "0.1.0"
authors = ["jiuker <guozhi.li@dmall.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
regex="*"
quick-xml = "*"
env_logger = "0.7"
actix-rt = "1.0.0"
futures = "0.3.1"


actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"

[dependencies.lazy_static]
features = ["spin_no_std"]